<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5b5b5b"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:theme="@style/ElevationActiveStyle"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/lesson"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="99">

                <ImageView
                    android:id="@+id/star_1"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_weight="33"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star_2"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_weight="33"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star_3"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_weight="33"
                    android:src="@drawable/star" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="85"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_weight="75"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/play"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/finish_btn"
                    android:text="@string/play"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/inective"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#9c000000"
                    android:orientation="horizontal"></LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/best"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/best_score"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/last_score"
                    android:textColor="#BEBEBE"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>